--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import "@fontsource-variable/onest";
       content="Contrata a javiervleon para crear tu aplicación web o móvil. Desarrollador de Software. Enfocado en las necesidades del cliente."
     />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} /><title>
       Portfolio de Javier Vásquez - Desarrollador de Software y Programador Web
       con +2 años de experiencia en desarrollo
