fixed routes, .nojekyll added

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,19 +5,19 @@ const PROJECTS = [
   {
     title: "Mubee (Dashboard de películas)",
     techs: ["Angular", "Tailwind"],
-    image: "mubee.png",
+    image: "/dev-portfolio/mubee.png",
     link: "https://javiervleon.github.io/mubee-angular/",
   },
   {
     title: "Hegoval (Landing Page)",
     techs: ["Astro", "React", "Tailwind"],
-    image: "hegoval.png",
+    image: "/dev-portfolio/hegoval.png",
     link: "https://hegoval.cl",
   },
   {
     title: "DryFacilitys (Landing Page)",
     techs: ["React", "Bootstrap"],
-    image: "dryfacilitys.png",
+    image: "/dev-portfolio/dryfacilitys.png",
     link: "https://dryfacilitys.cl",
   },
 ];
