--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Notebook from "../components/icons/Notebook.astro";
     <SectionContainer class="flex items-center flex-col py-10 lg:py-44 pb-24">
       <img
         class="rounded-full size-32 lg:size-38 mb-12 object-cover"
-        src="hero.jpg"
+        src="/dev-portfolio/hero.jpg"
         alt="javiervleon photo"
       />
       <h1
