Correo actualizado, botón de menú mobile reubicado

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@
   </nav>
 
   <!-- Mobile nav (checkbox + peer to avoid extra JS) -->
-  <div class="md:hidden">
+  <div class="md:hidden mx-5">
     <!-- hidden checkbox to toggle menu -->
     <input id="nav-toggle" type="checkbox" class="peer hidden" />
 
