--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,9 +58,9 @@ import Notebook from "../components/icons/Notebook.astro";
             <GitHub class="size-4 lg:size-6" />
             GitHub
           </SocialPill>
-          <SocialPill href="mailto:javiervleon99@gmail.com">
+          <SocialPill href="mailto:javiervleon.dev@gmail.com">
             <At class="size-4 lg:size-6" />
-            javiervleon99@gmail.com
+            javiervleon.dev@gmail.com
           </SocialPill>
         </nav>
       </ul>
