--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,7 +31,7 @@ const currentYear = new Date().getFullYear();
           <a
             href="mailto:javiervleon99@gmail.com"
             class="mt-4 flex items-center"
-            ><At /> <span class="ml-2">javiervleon99@gmail.com</span></a
+            ><At /> <span class="ml-2">javiervleon.dev@gmail.com</span></a
           >
         </li>
       </ul>
@@ -44,7 +44,7 @@ const currentYear = new Date().getFullYear();
       <a href="#contacto" class="my-1">Contacto</a>
     </div>
   </div>
-  <span class="flex flex-row justify-center"
-    >© {currentYear} | javiervleon. Todos los derechos reservados</span
+  <span class="flex flex-row justify-center text-center mt-5"
+    >© {currentYear} | javiervleon. Todos los derechos reservados.</span
   >
 </footer>
